feat: data loading started

--- a/src/Step1_Clean_Extract_Bulk_Export.ipynb
+++ b/src/Step1_Clean_Extract_Bulk_Export.ipynb
@@ -18,7 +18,7 @@
     "- **TCX Files**\\\n",
     "  TCX (Training Center XML) files are also there ¯\\\\\\_(ツ)\\_/¯\n",
     "\n",
-    "This Jupyter Notebook aims to extract desired information from provided Strava bulk exports and load them into a MySQL relational schema\n"
+    "This Jupyter Notebook aims to extract and uncompress desired information from provided Strava bulk exports\n"
    ]
   },
   {
@@ -32,18 +32,12 @@
     "Package Imports and Constants\n",
     "\n",
     "Run this cell to import all the packages we need and define some constants. \n",
-    "You'll likely need to install any missing packages to your Python environment\n",
-    "with pip or your package manager of choice.\n",
     "'''\n",
     "\n",
     "import os                   # For navigating bulk export on filesystem\n",
     "import gzip                 # For uncompressing .gz files\n",
     "import shutil\n",
     "from zipfile import ZipFile # For uncompressing .zip files\n",
-    "\n",
-    "import fitdecode            # For .fit file parsing\n",
-    "import gpxpy                # For .gpx file parsing\n",
-    "\n",
     "\n",
     "DATA_DIR_PATH = '../data/'  # Path of data directory relative to this Jupyter Notebook\n",
     "ACTIVITY_DIR_PATH = os.path.join(DATA_DIR_PATH + 'export_activities')\n"
@@ -167,7 +161,7 @@
    "id": "c57e3bb5",
    "metadata": {},
    "source": [
-    "Now we have all of the data we care about extracted in `data/export_activities/`! Each person's export is now a subdirectory composed of .fit, .gpx, or even .tcx files.  "
+    "Now we have all of the data we care about extracted in `data/export_activities/`! Each person's export is now a subdirectory composed of .fit, .gpx, or even .tcx files. Head to the 'Step2' Jupyter Notebook for the next step, converting these files to a bunch of CSV files so they can be loaded into MySQL!"
    ]
   }
  ],
