--- a/src/Step3_Load_MySQL.ipynb
+++ b/src/Step3_Load_MySQL.ipynb
@@ -5,37 +5,181 @@
    "id": "b02c4795",
    "metadata": {},
    "source": [
-    "# Loading CSVs Into MySQL"
+    "# Loading CSVs Into MySQL\n",
+    "We got all of our desired data into tabular format, hooray! But now it's stored in a bunch of CSV files while our database sits completely empty. Let's fix that!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fc23b27a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "Package Imports, Constants, Global Variable\n",
+    "\n",
+    "Run this cell to import all the packages we need and define some constants. \n",
+    "You'll likely need to install any missing packages to your Python environment\n",
+    "with pip or your package manager of choice.\n",
+    "'''\n",
+    "\n",
     "import mysql.connector\n",
     "from dotenv import load_dotenv\n",
     "import os"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1a9eee1c",
+   "metadata": {},
+   "source": [
+    "To setup Python's connection to a MySQL Server instance, we have to feed it some login credentials. I'm just doing this through a `.env` file instead of leaking my IP address, username, and password directly in my code. We can also specify the database we're going to be working in, which lets us omit a `USE` statement when we run SQL commands. I included it because we're only working in one database for this project.\n",
+    "\n",
+    "If the cell runs successfully, we've successfully created a MySQLConnection object that we can use to talk to the MySQL instance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a3a64ccf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mysql.connector.connection_cext.CMySQLConnection object at 0x0000029394477750>\n"
+     ]
+    }
+   ],
    "source": [
     "load_dotenv(dotenv_path = '../.env')\n",
     "\n",
     "db_server = mysql.connector.connect(\n",
     "  host = os.getenv('HOST'),\n",
     "  user = os.getenv('USER'),\n",
-    "  password = os.getenv('PASSWORD')\n",
+    "  password = os.getenv('PASSWORD'),\n",
+    "  database = os.getenv('DB'),\n",
+    "  allow_local_infile = True\n",
     ")\n",
     "\n",
-    "print(db_server)"
+    "print(db_server)\n",
+    "db_cursor =  db_server.cursor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7aee931b",
+   "metadata": {},
+   "source": [
+    "Our database doesn't have any tables to load data into, so let's add a few! Since all of our data is in the files, we can `DROP TABLE IF EXISTS` to get rid of previous loads."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7282d58d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_cursor.execute('DROP TABLE IF EXISTS points')\n",
+    "db_cursor.execute('DROP TABLE IF EXISTS activities')\n",
+    "\n",
+    "\n",
+    "db_cursor.execute(\n",
+    "  # I love multiline strings\n",
+    "  '''CREATE TABLE IF NOT EXISTS activities (\n",
+    "    user_id INT NOT NULL,\n",
+    "    activity_id INT PRIMARY KEY,\n",
+    "    filename VARCHAR(20) NOT NULL,\n",
+    "    start DATETIME NOT NULL,\n",
+    "    end DATETIME NOT NULL,\n",
+    "    distance_2d FLOAT NOT NULL,\n",
+    "    distance_3d FLOAT NOT NULL,\n",
+    "    avg_speed FLOAT NOT NULL,\n",
+    "    max_speed FLOAT NOT NULL,\n",
+    "    uphill FLOAT NOT NULL,\n",
+    "    downhill FLOAT NOT NULL,\n",
+    "    avg_hr FLOAT,\n",
+    "    min_hr INT,\n",
+    "    max_hr INT,\n",
+    "    avg_cad FLOAT,\n",
+    "    min_cad INT,\n",
+    "    max_cad INT,\n",
+    "    total_kcal INT\n",
+    "  )'''\n",
+    ")\n",
+    "\n",
+    "db_cursor.execute(\n",
+    "  '''\n",
+    "  CREATE TABLE IF NOT EXISTS points (\n",
+    "    seq_num INT NOT NULL,\n",
+    "    activity_id INT NOT NULL,\n",
+    "    latitude DOUBLE NOT NULL,\n",
+    "    longitude DOUBLE NOT NULL,\n",
+    "    elevation FLOAT NOT NULL,\n",
+    "    time DATETIME NOT NULL,\n",
+    "    speed FLOAT NOT NULL,\n",
+    "    hr INT,\n",
+    "    cad INT,\n",
+    "    PRIMARY KEY (seq_num, activity_id),\n",
+    "    CONSTRAINT points_fk_activities FOREIGN KEY (activity_id) REFERENCES activities (activity_id)\n",
+    "  )\n",
+    "  '''\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94f2c3cb",
+   "metadata": {},
+   "source": [
+    "Time to load CSV files!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6167f6df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_csv_to_db(cursor :mysql.connector.cursor, table :str, csv_path : os.PathLike):\n",
+    "  cursor.execute (\n",
+    "    f'''\n",
+    "    LOAD DATA LOCAL INFILE '{csv_path}'\n",
+    "    INTO TABLE {table}\n",
+    "    FIELDS TERMINATED BY ','\n",
+    "    ENCLOSED BY '\"'\n",
+    "    LINES TERMINATED BY '\\n'\n",
+    "    IGNORE 1 LINES\n",
+    "    '''\n",
+    ")\n",
+    "\n",
+    "load_csv_to_db(db_cursor, 'activities', '../data/activities_summaries.csv')\n",
+    "load_csv_to_db(db_cursor, 'points', '../data/points.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "301848c7",
+   "metadata": {},
+   "source": [
+    "This last cell is very important (I was wondering why nothing was showing up in the database for so long because I forgot the `commit()` call lmao). In the `mysql.connector`, the `connection.commit()` method is used to permanently save any changes made to the database during the current transaction. \n",
+    "\n",
+    "By default, the mysql.connector does not use autocommit, meaning that changes (such as `INSERT`, `UPDATE`, or `DELETE` operations) are staged and held in a temporary state until explicitly committed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "74e48ec3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_server.commit()\n",
+    "db_server.close()"
    ]
   }
  ],
