feat: almost there?

--- a/src/Step1_Clean_Extract_Bulk_Export.ipynb
+++ b/src/Step1_Clean_Extract_Bulk_Export.ipynb
@@ -6,24 +6,24 @@
    "metadata": {},
    "source": [
     "# Strava Export Parsing\n",
-    "Bulk Strava exports (obtained using the ['Bulk Export' instructions by Strava Support](https://support.strava.com/hc/en-us/articles/216918437-Exporting-your-Data-and-Bulk-Export)) come in the form of a large zipped file containing a variety of CSV and other files in the top-level folder, along with a few subdirectories (`activities`, `clubs`, `media`, and `routes`). Luckily for us, the majority of the CSVs and subdirectories are sparse or empty due to users not utilizing those features or contain data not directly relevant to activity logging, such as device identifiers, app login tracking, etc.\n",
+    "Bulk Strava exports (obtained using the ['Bulk Export' instructions by Strava Support](https://support.strava.com/hc/en-us/articles/216918437-Exporting-your-Data-and-Bulk-Export)) come in the form of a large zipped file containing a variety of CSV and other files in the top-level folder, along with a few subdirectories (`activities`, `clubs`, `media`, and `routes`). Luckily for us, the majority of the subdirectories are sparse or empty due to users not utilizing those features or contain data not directly relevant to activity logging, such as device identifiers, app login tracking, etc.\n",
     "##### **Which files do we actually care about?**\n",
-    "In the `activities` subdirectory, there is a file for every action that is logged by Strava. These files are what we mainly care about, and they tend to come in two different flavors:\n",
-    "- **FIT (.fit) or Compressed FIT (.fit.gz) Files**\\\n",
+    "- In the `activities` subdirectory, there is a file for every action/exercise that is logged by Strava. These files are what we mainly care about, and they tend to come in three different flavors:\n",
+    "  - **FIT (.fit) or Compressed FIT (.fit.gz) Files**\\\n",
     "  FIT (Flexible and Interoperable data Transfer) is a [binary file type developed by Garmin](https://developer.garmin.com/fit/file-types/) that is a able to store a breadth of data recorded by a fitness tracker (check out the link for what sort of data can be stored in there!). These are binary files, which means that they are not human-readable even when uncompressed. We can use the [fitdecode Python library](https://pypi.org/project/fitdecode/) for reading and parsing these files after uncompressing them.\n",
     "\n",
-    "- **GPX Files**\\\n",
+    "  - **GPX Files**\\\n",
     "  GPX (GPs eXchange format) is an open way to store location data such as waypoints and routes in an XML-based file format. XML is human-readable, which means we can view the raw data if desired. Although GPX focuses more on location data and can contains less descriptive activity information than a FIT file could, this data format is simpler and more widely used. We can use the [gpxpy Python library](https://pypi.org/project/gpxpy/) for reading and parsing GPX files.\n",
     "\n",
-    "- **TCX Files**\\\n",
-    "  TCX (Training Center XML) files are also there ¯\\\\\\_(ツ)\\_/¯\n",
-    "\n",
+    "  - **TCX Files**\\\n",
+    "  TCX (Training Center XML) files are also there ¯\\\\\\_(ツ)\\_/¯/\n",
+    "- There are also quite a few CSVs contained in the export. Although some of them seem mostly irrelevant, others provide useful info on how Strava stores \n",
     "This Jupyter Notebook aims to extract and uncompress desired information from provided Strava bulk exports\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fc1d3cb0",
    "metadata": {},
    "outputs": [],
@@ -39,8 +39,9 @@
     "import shutil\n",
     "from zipfile import ZipFile # For uncompressing .zip files\n",
     "\n",
-    "DATA_DIR_PATH = '../data/'  # Path of data directory relative to this Jupyter Notebook\n",
-    "ACTIVITY_DIR_PATH = os.path.join(DATA_DIR_PATH + 'export_activities')\n"
+    "DATA_DIR_PATH = os.path.join('..', 'data')  # Path of data directory relative to this Jupyter Notebook\n",
+    "ACTIVITY_DIR_PATH = os.path.join(DATA_DIR_PATH, 'export_activities')\n",
+    "INTERESTED_CSVS = ['activities', 'profile', 'followers', 'following', 'global_challenges', 'group_challenges']\n"
    ]
   },
   {
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c825d3db",
    "metadata": {},
    "outputs": [
@@ -62,16 +63,18 @@
      "output_type": "stream",
      "text": [
       "Files and directories in the data directory:\n",
+      "\t.gitkeep\n",
       "\texport_101635319.zip\n",
       "\texport_148511532.zip\n",
       "\texport_57141745.zip\n",
       "\texport_96589216.zip\n",
+      "\tout_file.txt\n",
       "Found 4 zips! Ready to extract.\n",
       "\tExtracting activities from zip 1 of 4 ...\n",
       "\tExtracting activities from zip 2 of 4 ...\n",
       "\tExtracting activities from zip 3 of 4 ...\n",
       "\tExtracting activities from zip 4 of 4 ...\n",
-      "All zips extracted to '../data/export_activities'!\n"
+      "All zips extracted to '..\\data\\export_activities'!\n"
      ]
     }
    ],
@@ -93,11 +96,13 @@
     "i = 1\n",
     "for entry in zip_archives:\n",
     "  print(f'\\tExtracting activities from zip {i} of {num_zips} ...')\n",
-    "  with ZipFile(DATA_DIR_PATH + entry) as archive:\n",
+    "  with ZipFile(os.path.join(DATA_DIR_PATH, entry)) as archive:\n",
     "      for file in archive.namelist():\n",
-    "        if file.startswith('activities/'):\n",
+    "        if file.startswith('activities/') or file in [name + '.csv' for name in INTERESTED_CSVS]:\n",
     "          archive.getinfo(file).filename = entry.split('.')[0] + '/' + file.split('/')[-1]\n",
     "          archive.extract(file, ACTIVITY_DIR_PATH)\n",
+    "        # if file.split('.')[0] in INTERESTED_CSVS:\n",
+    "        #   archive.extract(file, ACTIVITY_DIR_PATH) \n",
     "  i += 1\n",
     "print(f'All zips extracted to \\'{ACTIVITY_DIR_PATH}\\'!')"
    ]
@@ -112,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2f407c71",
    "metadata": {},
    "outputs": [
@@ -121,10 +126,10 @@
      "output_type": "stream",
      "text": [
       "Found 4 activity export directories!\n",
-      "\tExtracting all activities from directory 1 of 4 ...\n",
-      "\tExtracting all activities from directory 2 of 4 ...\n",
-      "\tExtracting all activities from directory 3 of 4 ...\n",
-      "\tExtracting all activities from directory 4 of 4 ...\n",
+      "\tExtracting all activities in directory 1 of 4 ...\n",
+      "\tExtracting all activities in directory 2 of 4 ...\n",
+      "\tExtracting all activities in directory 3 of 4 ...\n",
+      "\tExtracting all activities in directory 4 of 4 ...\n",
       "All gzips extracted in place!\n"
      ]
     }
@@ -161,7 +166,7 @@
    "id": "c57e3bb5",
    "metadata": {},
    "source": [
-    "Now we have all of the data we care about extracted in `data/export_activities/`! Each person's export is now a subdirectory composed of .fit, .gpx, or even .tcx files. Head to the 'Step2' Jupyter Notebook for the next step, converting these files to a bunch of CSV files so they can be loaded into MySQL!"
+    "Now we have all of the data we care about extracted in `data/export_activities/`! Each person's export is now a subdirectory composed of .csv, .fit, .gpx, or even .tcx files. Head to the 'Step2' Jupyter Notebook for the next step, converting these discrete files to a bunch of CSVs so they can be loaded into MySQL!"
    ]
   }
  ],
