--- a/src/Step3_Load_MySQL.ipynb
+++ b/src/Step3_Load_MySQL.ipynb
@@ -6,12 +6,14 @@
    "metadata": {},
    "source": [
     "# Loading CSVs Into MySQL\n",
-    "We got all of our desired data into tabular format, hooray! But now it's stored in a bunch of CSV files while our database sits completely empty. Let's fix that!"
+    "We got all of our desired data into tabular format, hooray! But now it's stored in a bunch of CSV files while our database sits completely empty. Let's fix that!\n",
+    "\n",
+    "This notebook uses a lot of sequentially-dependent operations, so I would recommend either stepping through this notebook sequentially from the top down or clicking the \"Run All\" button to avoid errors."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "fc23b27a",
    "metadata": {},
    "outputs": [],
@@ -26,7 +28,10 @@
     "\n",
     "import mysql.connector\n",
     "from dotenv import load_dotenv\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "DATA_DIR_PATH = os.path.join('..', 'data')  # Path of data directory relative to this Jupyter Notebook\n",
+    "OUTPUT_DIR_PATH = os.path.join(DATA_DIR_PATH, 'outputs')"
    ]
   },
   {
@@ -41,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "a3a64ccf",
    "metadata": {},
    "outputs": [
@@ -49,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mysql.connector.connection_cext.CMySQLConnection object at 0x0000029394477750>\n"
+      "<mysql.connector.connection_cext.CMySQLConnection object at 0x000001EC4876AFD0>\n"
      ]
     }
    ],
@@ -73,30 +78,52 @@
    "id": "7aee931b",
    "metadata": {},
    "source": [
-    "Our database doesn't have any tables to load data into, so let's add a few! Since all of our data is in the files, we can `DROP TABLE IF EXISTS` to get rid of previous loads."
+    "Our database doesn't have any tables to load data into, so let's add a few! Since all of our data is in the CSV files, we can `DROP TABLE IF EXISTS` to get rid of previous loads."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "7282d58d",
    "metadata": {},
    "outputs": [],
    "source": [
     "db_cursor.execute('DROP TABLE IF EXISTS points')\n",
     "db_cursor.execute('DROP TABLE IF EXISTS activities')\n",
+    "db_cursor.execute('DROP TABLE IF EXISTS challenges')\n",
+    "db_cursor.execute('DROP TABLE IF EXISTS users')\n",
     "\n",
     "\n",
     "db_cursor.execute(\n",
+    "  '''\n",
+    "  CREATE TABLE IF NOT EXISTS users (\n",
+    "    user_id INT PRIMARY KEY,\n",
+    "    email_address VARCHAR(50) NOT NULL,\n",
+    "    first_name VARCHAR(50) NOT NULL,\n",
+    "    last_name VARCHAR(50) NOT NULL,\n",
+    "    description VARCHAR(100) NOT NULL,\n",
+    "    weight FLOAT NOT NULL,\n",
+    "    city VARCHAR(20),\n",
+    "    state VARCHAR(20),\n",
+    "    country VARCHAR(20)\n",
+    "  )\n",
+    "  '''\n",
+    ")\n",
+    "\n",
+    "db_cursor.execute(\n",
     "  # I love multiline strings\n",
-    "  '''CREATE TABLE IF NOT EXISTS activities (\n",
+    "  '''\n",
+    "  CREATE TABLE IF NOT EXISTS activities (\n",
     "    user_id INT NOT NULL,\n",
     "    activity_id INT PRIMARY KEY,\n",
+    "    name VARCHAR(50) NOT NULL,\n",
+    "    type VARCHAR(20) NOT NULL,\n",
+    "    description VARCHAR(200),\n",
     "    filename VARCHAR(20) NOT NULL,\n",
     "    start DATETIME NOT NULL,\n",
     "    end DATETIME NOT NULL,\n",
     "    distance_2d FLOAT NOT NULL,\n",
-    "    distance_3d FLOAT NOT NULL,\n",
+    "    distance_3d FLOAT,\n",
     "    avg_speed FLOAT NOT NULL,\n",
     "    max_speed FLOAT NOT NULL,\n",
     "    uphill FLOAT NOT NULL,\n",
@@ -107,8 +134,10 @@
     "    avg_cad FLOAT,\n",
     "    min_cad INT,\n",
     "    max_cad INT,\n",
-    "    total_kcal INT\n",
-    "  )'''\n",
+    "    total_kcal INT,\n",
+    "    CONSTRAINT activities_fk_users FOREIGN KEY (user_id) REFERENCES users (user_id)\n",
+    "  )\n",
+    "  '''\n",
     ")\n",
     "\n",
     "db_cursor.execute(\n",
@@ -127,6 +156,20 @@
     "    CONSTRAINT points_fk_activities FOREIGN KEY (activity_id) REFERENCES activities (activity_id)\n",
     "  )\n",
     "  '''\n",
+    ")\n",
+    "\n",
+    "db_cursor.execute(\n",
+    "  '''\n",
+    "  CREATE TABLE IF NOT EXISTS challenges (\n",
+    "    challenge_id INT PRIMARY KEY,\n",
+    "    join_datetime DATETIME NOT NULL,\n",
+    "    name VARCHAR(50) NOT NULL,\n",
+    "    completed TINYINT NOT NULL,\n",
+    "    type VARCHAR(20) NOT NULL,\n",
+    "    user_id INT NOT NULL,\n",
+    "    CONSTRAINT challenges_fk_users FOREIGN KEY (user_id) REFERENCES users (user_id)\n",
+    "  )\n",
+    "  '''\n",
     ")"
    ]
   },
@@ -140,10 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "6167f6df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'activities': '../data/outputs/activities.csv', 'challenges': '../data/outputs/challenges.csv', 'points': '../data/outputs/points.csv', 'users': '../data/outputs/users.csv'}\n"
+     ]
+    }
+   ],
    "source": [
     "def load_csv_to_db(cursor :mysql.connector.cursor, table :str, csv_path : os.PathLike):\n",
     "  cursor.execute (\n",
@@ -156,9 +207,27 @@
     "    IGNORE 1 LINES\n",
     "    '''\n",
     ")\n",
+    "  \n",
+    "# files = os.listdir(OUTPUT_DIR_PATH)\n",
+    "# for file in files:\n",
+    "#   table_name = file.split('.')[0]\n",
+    "#   csvpath = '../data/outputs/' + file\n",
+    "#   print(f'Loading {file} \\n\\tInto table {table_name} \\n\\tFrom file {csvpath}')\n",
     "\n",
-    "load_csv_to_db(db_cursor, 'activities', '../data/activities_summaries.csv')\n",
-    "load_csv_to_db(db_cursor, 'points', '../data/points.csv')"
+    "#   load_csv_to_db(db_cursor, table_name, csvpath)\n",
+    "\n",
+    "files = os.listdir(OUTPUT_DIR_PATH)\n",
+    "my_dict = {}\n",
+    "for file in files:\n",
+    "  table_name = file.split('.')[0]\n",
+    "  csvpath = '../data/outputs/' + file\n",
+    "  my_dict[table_name] = csvpath\n",
+    "\n",
+    "print(my_dict)\n",
+    "load_csv_to_db(db_cursor, 'users', my_dict['users'])\n",
+    "load_csv_to_db(db_cursor, 'activities', my_dict['activities'])\n",
+    "load_csv_to_db(db_cursor, 'challenges', my_dict['challenges'])\n",
+    "load_csv_to_db(db_cursor, 'points', my_dict['points'])\n"
    ]
   },
   {
@@ -173,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "74e48ec3",
    "metadata": {},
    "outputs": [],
@@ -185,7 +254,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
