feat: almost almost done

--- a/src/Step2_Export_CSV.ipynb
+++ b/src/Step2_Export_CSV.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "id": "08f2a957",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "id": "ebbcb145",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "id": "44c4315f",
    "metadata": {},
    "outputs": [],
@@ -391,7 +391,7 @@
     "    self.__create_activities_csv(os.path.join(dest_path, 'activities.csv'))\n",
     "    self.__create_users_csv(os.path.join(dest_path, 'users.csv'))\n",
     "    self.__create_challenges_csv(os.path.join(dest_path, 'challenges.csv'))\n",
-    "    self.__create_follows_csv(os.path.join(dest_path, 'follows.csv'))\n",
+    "    self.__create_follows_csv(os.path.join(dest_path, 'follow.csv'))\n",
     "\n",
     "  def __create_points_csv(self, dest_path: os.PathLike):\n",
     "    point_dfs = [user.get_activity_points() for user in self.__users if not user.get_activity_points().empty]\n",
@@ -415,18 +415,29 @@
     "\n",
     "  def __create_follows_csv(self, dest_path: os.PathLike):\n",
     "    follow_dfs = [user.get_follows() for user in self.__users]\n",
-    "    combined_follows_df = pd.concat(follow_dfs)\n",
-    "    user_ids = [int(user.get_user_fields()['user_id']) for user in self.__users]\n",
-    "    print(user_ids)\n",
-    "    print(combined_follows_df)\n",
-    "    self.__combined_follows_df = combined_follows_df\n",
-    "    self.__combined_follows_df = combined_follows_df[(combined_follows_df['follower_user_id'].isin(user_ids)) & \n",
-    "                                                     (combined_follows_df['followee_user_id'].isin(user_ids))]\n",
-    "    print(self.__combined_follows_df)\n",
-    "    self.__combined_follows_df.to_csv(dest_path, index = False)\n",
+    "    combined_follows_df = pd.concat(follow_dfs, ignore_index=True)\n",
     "\n",
-    "  def get_follows(self) -> pd.DataFrame:\n",
-    "    return self.__combined_follows_df"
+    "    # Ensure user IDs are integers and drop rows with NaN values\n",
+    "    combined_follows_df['follower_user_id'] = pd.to_numeric(combined_follows_df['follower_user_id'], errors='coerce')\n",
+    "    combined_follows_df['followee_user_id'] = pd.to_numeric(combined_follows_df['followee_user_id'], errors='coerce')\n",
+    "    combined_follows_df.dropna(subset=['follower_user_id', 'followee_user_id'], inplace=True)\n",
+    "\n",
+    "    # Convert to integers after dropping NaNs\n",
+    "    combined_follows_df['follower_user_id'] = combined_follows_df['follower_user_id'].astype(int)\n",
+    "    combined_follows_df['followee_user_id'] = combined_follows_df['followee_user_id'].astype(int)\n",
+    "\n",
+    "    user_ids = [int(user.get_user_fields()['user_id']) for user in self.__users]\n",
+    "    print(\"User IDs:\", user_ids)\n",
+    "    print(\"Combined Follows DataFrame (Before Filtering):\\n\", combined_follows_df)\n",
+    "\n",
+    "    # Filter rows where both follower and followee are in the user_ids list\n",
+    "    self.__combined_follows_df = combined_follows_df[\n",
+    "      combined_follows_df['follower_user_id'].isin(user_ids) &\n",
+    "      combined_follows_df['followee_user_id'].isin(user_ids)\n",
+    "    ]\n",
+    "\n",
+    "    print(\"Filtered Follows DataFrame:\\n\", self.__combined_follows_df)\n",
+    "    self.__combined_follows_df.to_csv(dest_path, index=False)"
    ]
   },
   {
@@ -439,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "id": "4e1f34e1",
    "metadata": {},
    "outputs": [],
@@ -449,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "id": "df480cbf",
    "metadata": {},
    "outputs": [],
@@ -469,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "id": "b3873739",
    "metadata": {},
    "outputs": [],
@@ -484,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "id": "8bc49999",
    "metadata": {},
    "outputs": [
@@ -493,6 +504,7 @@
      "output_type": "stream",
      "text": [
       "Loading user 1 of 3 ...\n",
+      "Error occured when loading 7077892227.gpx: No tracks found in gpx file c:\\Users\\matth\\Documents\\Python\\CS3200\\CS3200_Strava_Secretary\\data\\export_activities\\export_101635319\\7077892227.gpx\n",
       "Error occured when loading 7077892227.gpx: No tracks found in gpx file c:\\Users\\matth\\Documents\\Python\\CS3200\\CS3200_Strava_Secretary\\data\\export_activities\\export_101635319\\7077892227.gpx\n"
      ]
     },
@@ -509,6 +521,7 @@
      "output_type": "stream",
      "text": [
       "Loading user 2 of 3 ...\n",
+      "Loading user 3 of 3 ...\n",
       "Loading user 3 of 3 ...\n"
      ]
     },
@@ -534,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "id": "22965faa",
    "metadata": {},
    "outputs": [
@@ -550,35 +563,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['101635319', '57141745', '96589216']\n",
-      "    followee_user_id follow_status follower_user_id\n",
-      "0           36064991      Accepted        101635319\n",
-      "1           41868570      Accepted        101635319\n",
-      "2           45050667      Accepted        101635319\n",
-      "3           45711813      Accepted        101635319\n",
-      "4           47388563      Accepted        101635319\n",
-      "..               ...           ...              ...\n",
-      "130         96589216      Accepted        148511532\n",
-      "131         96589216      Accepted        150679523\n",
-      "132         96589216      Accepted        153835805\n",
-      "133         96589216      Accepted        158514221\n",
-      "134         96589216      Accepted        159639266\n",
+      "User IDs: [101635319, 57141745, 96589216]\n",
+      "Combined Follows DataFrame (Before Filtering):\n",
+      "      followee_user_id follow_status  follower_user_id\n",
+      "0            36064991      Accepted         101635319\n",
+      "1            41868570      Accepted         101635319\n",
+      "2            45050667      Accepted         101635319\n",
+      "3            45711813      Accepted         101635319\n",
+      "4            47388563      Accepted         101635319\n",
+      "..                ...           ...               ...\n",
+      "898          96589216      Accepted         148511532\n",
+      "899          96589216      Accepted         150679523\n",
+      "900          96589216      Accepted         153835805\n",
+      "901          96589216      Accepted         158514221\n",
+      "902          96589216      Accepted         159639266\n",
       "\n",
       "[903 rows x 3 columns]\n",
-      "    followee_user_id follow_status follower_user_id\n",
-      "0           36064991      Accepted        101635319\n",
-      "1           41868570      Accepted        101635319\n",
-      "2           45050667      Accepted        101635319\n",
-      "3           45711813      Accepted        101635319\n",
-      "4           47388563      Accepted        101635319\n",
-      "..               ...           ...              ...\n",
-      "130         96589216      Accepted        148511532\n",
-      "131         96589216      Accepted        150679523\n",
-      "132         96589216      Accepted        153835805\n",
-      "133         96589216      Accepted        158514221\n",
-      "134         96589216      Accepted        159639266\n",
-      "\n",
-      "[903 rows x 3 columns]\n"
+      "Filtered Follows DataFrame:\n",
+      "      followee_user_id follow_status  follower_user_id\n",
+      "10           57141745      Accepted         101635319\n",
+      "23           96589216      Accepted         101635319\n",
+      "61          101635319      Accepted          57141745\n",
+      "85          101635319      Accepted          96589216\n",
+      "354          96589216      Accepted          57141745\n",
+      "360         101635319      Accepted          57141745\n",
+      "593          57141745      Accepted          96589216\n",
+      "605          57141745      Accepted         101635319\n",
+      "714          57141745      Accepted          96589216\n",
+      "745         101635319      Accepted          96589216\n",
+      "815          96589216      Accepted          57141745\n",
+      "862          96589216      Accepted         101635319\n"
      ]
     }
    ],
@@ -591,33 +605,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "id": "186ae487",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[101635319, 57141745, 96589216]\n",
-      "    followee_user_id follow_status follower_user_id\n",
-      "10          57141745      Accepted        101635319\n",
-      "23          96589216      Accepted        101635319\n",
-      "206         96589216      Accepted         57141745\n",
-      "212        101635319      Accepted         57141745\n",
-      "42          57141745      Accepted         96589216\n",
-      "73         101635319      Accepted         96589216\n",
-      "Empty DataFrame\n",
-      "Columns: [followee_user_id, follow_status, follower_user_id]\n",
-      "Index: []\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\matth\\AppData\\Local\\Temp\\ipykernel_21492\\4122973669.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  combined_follows_df = combined_follows_df[(follows['follower_user_id'].isin(user_ids))]\n"
+     "ename": "AttributeError",
+     "evalue": "'Secretary' object has no attribute 'get_follows'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[59]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m follows = \u001b[43msecretary\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_follows\u001b[49m()\n\u001b[32m      3\u001b[39m user_ids = [\u001b[33m'\u001b[39m\u001b[33m101635319\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33m57141745\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33m96589216\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      4\u001b[39m user_ids = [\u001b[38;5;28mint\u001b[39m(\u001b[38;5;28mid\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m \u001b[38;5;28mid\u001b[39m \u001b[38;5;129;01min\u001b[39;00m user_ids]\n",
+      "\u001b[31mAttributeError\u001b[39m: 'Secretary' object has no attribute 'get_follows'"
      ]
     }
    ],
