--- a/src/Step3_Load_MySQL.ipynb
+++ b/src/Step3_Load_MySQL.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "fc23b27a",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "a3a64ccf",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mysql.connector.connection_cext.CMySQLConnection object at 0x000001EC4876AFD0>\n"
+      "<mysql.connector.connection_cext.CMySQLConnection object at 0x0000022D8A351010>\n"
      ]
     }
    ],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "7282d58d",
    "metadata": {},
    "outputs": [],
@@ -91,24 +91,26 @@
     "db_cursor.execute('DROP TABLE IF EXISTS points')\n",
     "db_cursor.execute('DROP TABLE IF EXISTS activities')\n",
     "db_cursor.execute('DROP TABLE IF EXISTS challenges')\n",
-    "db_cursor.execute('DROP TABLE IF EXISTS users')\n",
+    "db_cursor.execute('DROP TABLE IF EXISTS follow')\n",
+    "#db_cursor.execute('DROP TABLE IF EXISTS users')\n",
     "\n",
     "\n",
-    "db_cursor.execute(\n",
-    "  '''\n",
-    "  CREATE TABLE IF NOT EXISTS users (\n",
-    "    user_id INT PRIMARY KEY,\n",
-    "    email_address VARCHAR(50) NOT NULL,\n",
-    "    first_name VARCHAR(50) NOT NULL,\n",
-    "    last_name VARCHAR(50) NOT NULL,\n",
-    "    description VARCHAR(100) NOT NULL,\n",
-    "    weight FLOAT NOT NULL,\n",
-    "    city VARCHAR(20),\n",
-    "    state VARCHAR(20),\n",
-    "    country VARCHAR(20)\n",
-    "  )\n",
-    "  '''\n",
-    ")\n",
+    "\n",
+    "# db_cursor.execute(\n",
+    "#   '''\n",
+    "#   CREATE TABLE IF NOT EXISTS users (\n",
+    "#     user_id INT PRIMARY KEY,\n",
+    "#     email_address VARCHAR(50) NOT NULL,\n",
+    "#     first_name VARCHAR(50) NOT NULL,\n",
+    "#     last_name VARCHAR(50) NOT NULL,\n",
+    "#     description VARCHAR(100) NOT NULL,\n",
+    "#     weight FLOAT NOT NULL,\n",
+    "#     city VARCHAR(20),\n",
+    "#     state VARCHAR(20),\n",
+    "#     country VARCHAR(20)\n",
+    "#   )\n",
+    "#   '''\n",
+    "# )\n",
     "\n",
     "db_cursor.execute(\n",
     "  # I love multiline strings\n",
@@ -170,6 +172,19 @@
     "    CONSTRAINT challenges_fk_users FOREIGN KEY (user_id) REFERENCES users (user_id)\n",
     "  )\n",
     "  '''\n",
+    ")\n",
+    "\n",
+    "db_cursor.execute(\n",
+    "  '''\n",
+    "  CREATE TABLE IF NOT EXISTS follow (\n",
+    "    followee_user_id INT NOT NULL,\n",
+    "    follow_status VARCHAR(20) NOT NULL,\n",
+    "    follower_user_id INT NOT NULL,\n",
+    "    PRIMARY KEY (followee_user_id, follower_user_id),\n",
+    "    CONSTRAINT followees_fk_users FOREIGN KEY (followee_user_id) REFERENCES users (user_id),\n",
+    "    CONSTRAINT followers_fk_users_b FOREIGN KEY (follower_user_id) REFERENCES users (user_id)\n",
+    "  )\n",
+    "  '''\n",
     ")"
    ]
   },
@@ -183,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "6167f6df",
    "metadata": {},
    "outputs": [
@@ -191,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'activities': '../data/outputs/activities.csv', 'challenges': '../data/outputs/challenges.csv', 'points': '../data/outputs/points.csv', 'users': '../data/outputs/users.csv'}\n"
+      "{'activities': '../data/outputs/activities.csv', 'challenges': '../data/outputs/challenges.csv', 'follow': '../data/outputs/follow.csv', 'points': '../data/outputs/points.csv', 'users': '../data/outputs/users.csv'}\n"
      ]
     }
    ],
@@ -224,10 +239,13 @@
     "  my_dict[table_name] = csvpath\n",
     "\n",
     "print(my_dict)\n",
-    "load_csv_to_db(db_cursor, 'users', my_dict['users'])\n",
+    "#load_csv_to_db(db_cursor, 'users', my_dict['users'])\n",
     "load_csv_to_db(db_cursor, 'activities', my_dict['activities'])\n",
     "load_csv_to_db(db_cursor, 'challenges', my_dict['challenges'])\n",
-    "load_csv_to_db(db_cursor, 'points', my_dict['points'])\n"
+    "load_csv_to_db(db_cursor, 'points', my_dict['points'])\n",
+    "load_csv_to_db(db_cursor, 'follow', my_dict['follow'])\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -242,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "74e48ec3",
    "metadata": {},
    "outputs": [],
@@ -254,7 +272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
