feat: added .fit support and some graphing

--- a/src/Step3_Load_MySQL.ipynb
+++ b/src/Step3_Load_MySQL.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "fc23b27a",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "a3a64ccf",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mysql.connector.connection_cext.CMySQLConnection object at 0x0000022D8A351010>\n"
+      "<mysql.connector.connection_cext.CMySQLConnection object at 0x00000291CAE67590>\n"
      ]
     }
    ],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "7282d58d",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,10 @@
     "db_cursor.execute('DROP TABLE IF EXISTS activities')\n",
     "db_cursor.execute('DROP TABLE IF EXISTS challenges')\n",
     "db_cursor.execute('DROP TABLE IF EXISTS follow')\n",
-    "#db_cursor.execute('DROP TABLE IF EXISTS users')\n",
+    "\n",
+    "# Commented out to avoid overwriting existing users table data when re-loading from CSV\n",
+    "\n",
+    "#db_cursor.execute('DROP TABLE IF EXISTS users') \n",
     "\n",
     "\n",
     "\n",
@@ -128,8 +131,8 @@
     "    distance_3d FLOAT,\n",
     "    avg_speed FLOAT NOT NULL,\n",
     "    max_speed FLOAT NOT NULL,\n",
-    "    uphill FLOAT NOT NULL,\n",
-    "    downhill FLOAT NOT NULL,\n",
+    "    uphill FLOAT,\n",
+    "    downhill FLOAT,\n",
     "    avg_hr FLOAT,\n",
     "    min_hr INT,\n",
     "    max_hr INT,\n",
@@ -198,18 +201,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6167f6df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'activities': '../data/outputs/activities.csv', 'challenges': '../data/outputs/challenges.csv', 'follow': '../data/outputs/follow.csv', 'points': '../data/outputs/points.csv', 'users': '../data/outputs/users.csv'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def load_csv_to_db(cursor :mysql.connector.cursor, table :str, csv_path : os.PathLike):\n",
     "  cursor.execute (\n",
@@ -222,14 +217,6 @@
     "    IGNORE 1 LINES\n",
     "    '''\n",
     ")\n",
-    "  \n",
-    "# files = os.listdir(OUTPUT_DIR_PATH)\n",
-    "# for file in files:\n",
-    "#   table_name = file.split('.')[0]\n",
-    "#   csvpath = '../data/outputs/' + file\n",
-    "#   print(f'Loading {file} \\n\\tInto table {table_name} \\n\\tFrom file {csvpath}')\n",
-    "\n",
-    "#   load_csv_to_db(db_cursor, table_name, csvpath)\n",
     "\n",
     "files = os.listdir(OUTPUT_DIR_PATH)\n",
     "my_dict = {}\n",
@@ -238,14 +225,11 @@
     "  csvpath = '../data/outputs/' + file\n",
     "  my_dict[table_name] = csvpath\n",
     "\n",
-    "print(my_dict)\n",
     "#load_csv_to_db(db_cursor, 'users', my_dict['users'])\n",
     "load_csv_to_db(db_cursor, 'activities', my_dict['activities'])\n",
     "load_csv_to_db(db_cursor, 'challenges', my_dict['challenges'])\n",
     "load_csv_to_db(db_cursor, 'points', my_dict['points'])\n",
-    "load_csv_to_db(db_cursor, 'follow', my_dict['follow'])\n",
-    "\n",
-    "\n"
+    "load_csv_to_db(db_cursor, 'follow', my_dict['follow'])"
    ]
   },
   {
@@ -253,14 +237,14 @@
    "id": "301848c7",
    "metadata": {},
    "source": [
-    "This last cell is very important (I was wondering why nothing was showing up in the database for so long because I forgot the `commit()` call lmao). In the `mysql.connector`, the `connection.commit()` method is used to permanently save any changes made to the database during the current transaction. \n",
+    "This last cell is very important (I was wondering why nothing was showing up in the database for so long because I forgot the `commit()` call lol). In the `mysql.connector`, the `connection.commit()` method is used to permanently save any changes made to the database during the current transaction. \n",
     "\n",
     "By default, the mysql.connector does not use autocommit, meaning that changes (such as `INSERT`, `UPDATE`, or `DELETE` operations) are staged and held in a temporary state until explicitly committed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "74e48ec3",
    "metadata": {},
    "outputs": [],
